Update copyrights and dependencies